@startuml
entity Patient {
    + **id UUID**
    --
    first_name
    last_name
    dob
    gender
    phone_no
    email
    australian_address {json}
    status (MERGED, ACTIVE)
}

entity PatientMergeHistory {
    + **id UUID**
    --
    keep_patient_id FK (indexed)
    discard_patient_id FK (indexed)
}

PatientMergeHistory -- Patient : keep
PatientMergeHistory -- Patient : discard

entity PatientIdentifier {
    + **id UUID**
    --
    IdType (MRN, National ID, Phone, Email)
    IdValue
    --
    patient_id FK (indexed)
    --
    Unique(IdType, IdValue, patient_id)
}

PatientIdentifier }-- Patient
@enduml